<resources>
    <string name="app_name">batman</string>
    <string name="default_title">batman</string>
    <string name="Please_enter_title">Please Enter a Movie Name</string>
    <string name="network_connection">NETWORK CONNECTION IS OFF</string>
    <string name="bundle_key_title">imdbId</string>
    <string name="year">Year :</string>
    <string name="rated">Rated :</string>
    <string name="title">Title :</string>
    <string name="director">Director :</string>
    <string name="actors">Actors :</string>
    <string name="writer">Writer :</string>
    <string name="awards">Awards :</string>
    <string name="plot">Plot :</string>
    <string name="search">Search</string>
    <string name="search_imdb">Search IMDB</string>
    <string name="retry">RETRY</string>
</resources>