<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools">

    <data>

        <variable
            name="loadingObservable"
            type="androidx.databinding.ObservableBoolean" />

        <variable
            name="searchModel"
            type="org.yara.movies.data.remote.model.response.search.Search" />

        <variable
            name="searchListModel"
            type="org.yara.movies.data.remote.model.response.search.SearchList" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorAccent">

            <Button
                android:id="@+id/btn_search"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/header_background"
                android:text="@string/search"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:backgroundTint="@null"
                app:layout_constraintLeft_toLeftOf="@id/edit_search"
                app:layout_constraintRight_toRightOf="@id/edit_search"
                app:layout_constraintTop_toBottomOf="@id/edit_search" />

            <EditText
                android:id="@+id/edit_search"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/header_background"
                android:gravity="center"
                android:hint="@string/search_imdb"
                android:inputType="text"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="14sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/child_main_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_search">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/search_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:reverseLayout="false"
                    app:spanCount="2"
                    bind:layout_editor_absoluteX="16dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/connections_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#dba506"
            android:visibility="gone"
            app:disableClickEvent="@{true}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/btn_retry"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="50dp"
                android:text="@string/retry"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/net_img" />

            <ImageView
                android:id="@+id/net_img"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_marginTop="100dp"
                android:src="@drawable/no_net"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <include
            android:id="@+id/includeLoading"
            layout="@layout/redirect_loading_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            bind:isLoading="@{loadingObservable}" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>